# pyboost

./: CMakeLists.txt
grayscale/: test.py
grayscale/include/: grayscale.hpp
grayscale/src/: grayscale.cpp  py_wrapper.cpp
src/: .python_module.cpp.swp  python_module.cpp
widefov/: CMakeLists.txt  gray.py
widefov/include/: precomp.hpp
widefov/include/opencv2/: widefov.hpp
widefov/include/opencv2/widefov/: widefov_fisheye.hpp
widefov/src/: multichkboard_stereocalib.cpp  py_wrapper.cpp  pyboost_cv3_converter.cpp  widefov_fisheye.cpp
